--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>YangTube</title>
   <script src="https://kit.fontawesome.com/749ef401a3.js" crossorigin="anonymous"></script>
 </head>
 
